fix(Action Group): Align content to center instead of baseline (#1931)

--- a/packages/css/src/components/action-group/action-group.scss
+++ b/packages/css/src/components/action-group/action-group.scss
@@ -4,7 +4,7 @@
  */
 
 .ams-action-group {
-  align-items: baseline;
+  align-items: center;
   display: inline-flex;
   flex-wrap: wrap;
   gap: var(--ams-action-group-gap);
